code aufgeräumt